@@ -1,3 +1,8 @@
+2009-02-02  Diego Novillo  <dnovillo@google.com>
+
+	* lto.c (lto_main): Stop LTO_TIMER and use
+	TV_WHOPR_WPA_LTRANS_EXEC when launching LTRANS.
+
 2009-01-30  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR lto/38995
